# pdf2htmlEX-rustwasm

./: .gitignore  AGENTS.md  AUTH_EPIC_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  EPIC_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md
.github/workflows/: cd-docker.yml  ci-rust.yml
.modernpath/: .gitignore  ralph-history.json  ralph-prompt.md  rust-pdf2html.sqlite
.modernpath/docs/rust-pdf2html/: README.md
.modernpath/source/: MANIFEST.json
.modernpath/source_docs/: MANIFEST.json
.modernpath/source_docs/architecture/: Code-Structure-pdf2htmlEX-pdf2htmlEX.md  Data-Models-pdf2htmlEX-pdf2htmlEX.md  Interfaces-pdf2htmlEX-pdf2htmlEX.md  Overview-pdf2htmlEX-pdf2htmlEX.md  Use-Cases-pdf2htmlEX-pdf2htmlEX.md
.modernpath/source_docs/module/: Code-Structure-src.md  Code-Structure-srcBackgroundRenderer.md  Code-Structure-srcHTMLRenderer.md  Code-Structure-srcutil.md  Code-Structure-test.md  Data-Models-src.md  Data-Models-srcBackgroundRenderer.md  Data-Models-srcHTMLRenderer.md  Data-Models-srcutil.md  Data-Models-test.md  Interfaces-src.md  Interfaces-srcBackgroundRenderer.md  Interfaces-srcHTMLRenderer.md  Interfaces-srcutil.md  Interfaces-test.md  Overview-src.md  Overview-srcBackgroundRenderer.md  Overview-srcHTMLRenderer.md  Overview-srcutil.md  Overview-test.md  Use-Cases-src.md  Use-Cases-srcBackgroundRenderer.md  Use-Cases-srcHTMLRenderer.md  Use-Cases-srcutil.md  Use-Cases-test.md
.modernpath/source_docs/other/: Architecture-Patterns.md  Code-Style-Patterns.md  File-Organization-Rules.md  Language-Conventions-cpp.md  Testing-Conventions.md
.modernpath/source_docs/subsystem/: Code-Structure-Background-Rendering-Engine.md  Code-Structure-Core-Utilities.md  Code-Structure-External-Dependencies.md  Code-Structure-HTML-Rendering-Engine.md  Code-Structure-Main-Application-Logic.md  Code-Structure-Other.md  Data-Models-Background-Rendering-Engine.md  Data-Models-Core-Utilities.md  Data-Models-External-Dependencies.md  Data-Models-HTML-Rendering-Engine.md  Data-Models-Main-Application-Logic.md  Data-Models-Other.md  Interfaces-Background-Rendering-Engine.md  Interfaces-Core-Utilities.md  Interfaces-External-Dependencies.md  Interfaces-HTML-Rendering-Engine.md  Interfaces-Main-Application-Logic.md  Interfaces-Other.md  Overview-Background-Rendering-Engine.md  Overview-Core-Utilities.md  Overview-External-Dependencies.md  Overview-HTML-Rendering-Engine.md  Overview-Main-Application-Logic.md  Overview-Other.md  Use-Cases-Background-Rendering-Engine.md  Use-Cases-Core-Utilities.md  Use-Cases-External-Dependencies.md  Use-Cases-HTML-Rendering-Engine.md  Use-Cases-Main-Application-Logic.md  Use-Cases-Other.md
.modernpath/specs/architecture/: component-specifications.md  infrastructure-deployment.md  integration-architecture.md  system-architecture-overview.md
.modernpath/specs/database/: api-contracts.md  data-migration-plan.md  database-schema-changes.md  entity-relationship-diagram.md
.modernpath/specs/modernization/: api-translation-spec.md  code-mapping-transformation.md  data-migration-plan.md  migration-strategy.md  test-migration-plan.md
.modernpath/specs/requirements/: epic-core-features.md  epic-data-management.md  epic-integration-features.md  epic-user-management.md  non-functional-requirements.md
.modernpath/specs/testing/: api-test-plan.md  e2e-test-plan.md  integration-test-plan.md  performance-test-plan.md  unit-test-plan.md
crates/ode-api/: AUTH_SYSTEM_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/ode-api/src/: auth.rs  auth_routes.rs  auth_tests.rs  db.rs  lib.rs  main.rs  models.rs  rate_limit.rs  routes.rs  routes_tests.rs  storage.rs  task_queue.rs  ui.html  webhooks.rs
crates/ode-api/tests/: api_tests.rs
crates/ode-core/: Cargo.toml
crates/ode-core/examples/: test_pdf.rs
crates/ode-core/src/: benchmarks.rs  config.rs  coordinate_tests.rs  error.rs  integration_tests.rs  lib.rs  memory_tests.rs  safety_audit.rs  tests.rs  us_acceptance_tests.rs
crates/ode-core/src/fonts/: mod.rs
crates/ode-core/src/parser/: content_stream.rs  encryption.rs  mod.rs  object_parser.rs  page_tree.rs
crates/ode-core/src/render/: covered_text.rs  mod.rs  state.rs  style_manager.rs
crates/ode-core/src/renderer/: mod.rs  text.rs
crates/ode-core/src/types/: color.rs
crates/ode-core/src/util/: encoding.rs  hash.rs  math.rs  mod.rs  timeout.rs  unicode.rs  zip_bomb.rs
crates/ode-wasm/: Cargo.toml
crates/ode-worker/: Cargo.toml
docker/: ode-api.Dockerfile  ode-core.Dockerfile  ode-worker.Dockerfile
docs/: ACCEPTANCE_CRITERIA.md  API_DATABASE_IMPLEMENTATION.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md
infrastructure/: INFRASTRUCTURE_COMPLETE.md  README.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
k8s/base/: 00-common.yaml  01-api.yaml  02-worker.yaml  03-viewer-ingress.yaml  04-hpa.yaml  05-prometheus.yaml  06-prometheus-adapter.yaml  07-redis-exporter.yaml  README-PROMETHEUS.md
(+20 files in other folders)
