[workspace]
members = [
    "crates/ode-core",
    "crates/ode-api",
    "crates/ode-worker",
]
exclude = [
    "crates/ode-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ModernPath"]
license = "GPL-3.0-or-later"
repository = "https://github.com/modernpath/ode"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
encoding_rs = "0.8"
flate2 = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
ttf-parser = "0.25"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
