[package]
name = "ode-api"
version.workspace = true
edition.workspace = true

[dependencies]
ode-core = { path = "../ode-core" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.21"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
bytes = "1.5"
getrandom = { workspace = true }
 validator = { version = "0.16", features = ["derive"] }
 argon2 = "0.5"
 jsonwebtoken = "7.2"
 regex = "1"
 password-hash = "0.5"
 hex = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["full"] }