[package]
name = "ode-api"
version.workspace = true
edition.workspace = true

[dependencies]
ode-core = { path = "../ode-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
thiserror.workspace = true
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
bytes = "1"
getrandom.workspace = true
validator = { version = "0.20", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "9"
regex = "1"
password-hash = "0.5"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
