[package]
name = "ode-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
byteorder.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
getrandom.workspace = true
tokio = { workspace = true, features = ["time", "sync"], optional = true }
ttf-parser.workspace = true
base64.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true

[dev-dependencies]
proptest = "1"
tempfile.workspace = true
